	   no longer work. Hopefully fixing crashes found in the 64 bit OpenSuse.

b) polynomial.c
	modified: void deletePolynomial(polynomial *a);
	1) in the event that the user attempts to delete a polynomial that
           has already been deleted, an error message now shows to inform them.

c) polynomial.h
	1) added a new error type 'illegalDelete'.

/////////////////////////////////////////////////////////////////////////////////////////////
//26th of November 2014 (b)
/////////////////////////////////////////////////////////////////////////////////////////////
Testing how unprocessed polynomials reacted to the code and essentially
crashed it. Checking if a polynomial was NULL wasn't enough as when
uninitialised it can have garbage values which is most definitely not
equal to NULL. This showed the need to have a flag inside each polynomial
to determine whether it's valid or not. This flag is set to TRUE upon
successful creation and FALSE on deletion.

a) polynomial.h
	1) struct now contains a flag for the polynomial with enum type 'flag'.
	2) seperated error types in arithmetic and printing to have
	   distinct error messages.

b) arithmetic.c
	1) verify() is now called at the end of each function to check if
	   the operation was a success or not. This is more of a hidden
	   method now.
	2) all checks which were previously 'if(a->poly != NULL) have been
	   replaced with 'if(a->valid == TRUE)'
	3) getOrder now returns an int to simplify things.
	
c) main.c
	1) removed all verify() calls as they are not needed by the user
	   anymore, only the authors.

misc: Updated the comments for all files to match the current version.

/////////////////////////////////////////////////////////////////////////////////////////////
//26th of November 2014 (a)
/////////////////////////////////////////////////////////////////////////////////////////////
Now makes use of the error returns of functions. To check if a function is