@@ -29,6 +29,9 @@ b) polynomial.c
 c) polynomial.h
 	1) added a new error type 'illegalDelete'.
 
+d) main.c
+	1) added test cases for invalid operations.
+
 /////////////////////////////////////////////////////////////////////////////////////////////
 //26th of November 2014 (b)
 /////////////////////////////////////////////////////////////////////////////////////////////
